--- a/Kpi-Reporting-App/templates/projects.html
+++ b/Kpi-Reporting-App/templates/projects.html
@@ -1,6 +1,13 @@
 <div>
-    <h3>Projects</h3>
-    <div ng-repeat="projectTestCases in projects">
-        <p><a href="#/projects/{{projectTestCases.id}}">{{projectTestCases.name}}</a></p>
+    <header class="data-title">
+        <p>Projects list</p>
+    </header>
+
+    <div>
+        <ul>
+            <li class="projects-list-item" ng-repeat="project in data.projects">
+                <a ng-href="#/projects/{{project.id}}/info">{{project.name}}</a>
+            </li>
+        </ul>
     </div>
 </div>
