Additional changes provided

--- a/Kpi-Reporting-App/templates/projectMap.html
+++ b/Kpi-Reporting-App/templates/projectMap.html
@@ -27,7 +27,7 @@
             </ul>
             <div class="events"
                  ng-if="testCase.expanded && testCase.events.length > 0"
-                 test-case-executions></div>
+                 test-case-events></div>
         </section>
     </article>
 </div>
