Project setup almost complete. Soon days allocation begins.

--- a/Kpi-Reporting-App/templates/directives/projectMenu.html
+++ b/Kpi-Reporting-App/templates/directives/projectMenu.html
@@ -1,4 +1,4 @@
 <ul class="project-menu-list">
-    <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/statistics">info</a></li>
+    <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/statistics">statistics</a></li>
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/allocationMap">allocation map</a></li>
 </ul>
