--- a/Kpi-Reporting-App/templates/directives/testCaseEvents.html
+++ b/Kpi-Reporting-App/templates/directives/testCaseEvents.html
@@ -33,7 +33,7 @@
             <li class="event-section-datetime"><p>{{event.timestamp}}</p></li>
             <li class="change-info">
                 <p>User changed from:
-                    <span>'{{event.ucOldUsername}}'</span> to <span>'{{event.ucNewUsername}}'</span>
+                    <span>&quot;{{event.ucOldUsername}}&quot;</span>&nbsp;to&nbsp;<span>&quot;{{event.ucNewUsername}}&quot;</span>
                 </p>
             </li>
         </ul>
