--- a/Kpi-Reporting-App/templates/projectSetup.html
+++ b/Kpi-Reporting-App/templates/projectSetup.html
@@ -1,1 +1,53 @@
-BLAAAAA
+<header>
+    <p>Setting up project &quot;{{setupData.project.name}}&quot;</p>
+</header>
+
+<form name="usersForm">
+    <div ng-repeat="user in setupData.allUsers">
+        <label>
+            <input type="checkbox" name="user" ng-checked="setupData.activeUsers[user.id]" ng-click="checkUncheck(user)">
+            <span>{{user.username}}</span>
+        </label>
+        <label ng-if="setupData.activeUsers[user.id]">
+            <span> - Index {{user.performanceIndex}} / Indicator (%) </span>
+            <input type="number" min="0" max="100" required
+                   ng-model="setupData.activeUsers[user.id].load"
+                   ng-change="calculateUserTCPD(user.id, user.performanceIndex)">
+            <span>
+                <span ng-if="usersForm.$valid">TC/day&nbsp;{{setupData.activeUsers[user.id].performance}}</span>
+                <span ng-if="!usersForm.$valid">TC/day&nbsp;Invalid data</span>
+            </span>
+        </label>
+    </div>
+
+    <div>
+        <p>Total expected test case executions per day (processing power) {{setupData.totalTCPD}}</p>
+        <p>Project remaining test cases count {{setupData.testCasesCount}}</p>
+        <p>Suggested project remaining duration {{setupData.suggestedDuration}} days</p>
+        <label>
+            <span>Remaining duration</span>
+            <input type="number" ng-model="setupData.duration" min="1" required
+                   ng-change="durationWarningCalculations()">
+            <span>&nbsp;days</span>
+        </label>
+    </div>
+
+    <div>
+        <span>Suggestion algorithm</span>
+        <label>
+            <p><input type="radio" name="algorithm" value="1"
+                      ng-model="setupData.algorithm">&quot;Fill days first&quot;</p>
+        </label>
+        <label>
+            <p><input type="radio" name="algorithm" value="2"
+                      ng-model="setupData.algorithm">&quot;Balanced&quot;</p>
+        </label>
+    </div>
+
+    <button ng-if="!usersForm.$valid || setupData.totalTCPD == 0"
+            disabled>Save
+    </button>
+    <button ng-if="usersForm.$valid && setupData.totalTCPD > 0"
+            ng-click="save()">Save
+    </button>
+</form>
