--- a/Kpi-Reporting-App/templates/projectStatistics.html
+++ b/Kpi-Reporting-App/templates/projectStatistics.html
@@ -1,7 +1,5 @@
 <nav project-menu class="project-menu"></nav>
 
 <div class="data-container">
-    <p>Project name: {{data.project.name}}</p>
-    <p>Id: {{data.project.id}}</p>
-    <p>Duration: {{data.project.duration}} days</p>
+    <p>Statistics for project &quot;{{data.project.name}}&quot;</p>
 </div>
