--- a/Kpi-Reporting-App/templates/projectMap.html
+++ b/Kpi-Reporting-App/templates/projectMap.html
@@ -16,7 +16,7 @@
                 <li class="status"><p>Status</p></li>
             </ul>
         </header>
-        <section class="test-cases" ng-repeat="testCase in data.project.testCases">
+        <section class="test-cases" ng-repeat="testCase in data.testCases">
             <ul>
                 <li class="expand-button-section" expand-test-case-buttons></li>
                 <li class="project-name"><p>{{data.project.name}}</p></li>
