--- a/Kpi-Reporting-App/templates/directives/projectMenu.html
+++ b/Kpi-Reporting-App/templates/directives/projectMenu.html
@@ -2,4 +2,5 @@
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/statistics">statistics</a></li>
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/allocationMap">allocation map</a></li>
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/daysAllocation">days allocation</a></li>
+    <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/setup">setup</a></li>
 </ul>
