--- a/Kpi-Reporting-App/templates/projectDays.html
+++ b/Kpi-Reporting-App/templates/projectDays.html
@@ -11,4 +11,14 @@
         <span>Expected: {{day.expectedTestCases}}</span>
         <span style="color:orange;" ng-if="daysData.alerts[day.dayId]">&#9888;</span>
     </div>
+
+    <button ng-if="daysData.chosenReasons.length > 0" ng-click="addDay()">Add day</button>
+
+    <select ng-options="reason.name for reason in daysData.reasons track by reason.id" ng-model="daysData.selectedReason"></select>
+
+    <button ng-click="addReason(daysData.selectedReason)">Add reason</button>
+    <div ng-repeat="reason in daysData.chosenReasons">
+        <span>{{reason.name}}</span>
+        <span><button ng-click="removeReason(reason)">X</button></span>
+    </div>
 </div>
