--- a/Kpi-Reporting-App/templates/directives/dateChange.html
+++ b/Kpi-Reporting-App/templates/directives/dateChange.html
@@ -1,10 +1,10 @@
 <div ng-if="!data.daysChanges[testCase.testCaseId]">
     <span class="text-left">{{testCase.dayPreview}}</span>
     <button class="text-right options"
-            ng-if="testCase.canEdit == 1 && testCase.isFinal == 0 && testCase.externalStatus == 2"
+            ng-if="testCase.canEdit == 1 && testCase.isFinal == 0 && testCase.externalStatus == 2 && data.unallocated <= 0"
             ng-click="prepareDaysForAllocated(testCase.testCaseId, testCase.dayIndex)">&#9776;</button>
     <button class="text-right options"
-            ng-if="testCase.externalStatus == 1"
+            ng-if="testCase.externalStatus == 1 && data.unallocated > 0"
             ng-click="prepareDaysForUnallocated(testCase.testCaseId)">&#9776;</button>
 </div>
 
