--- a/Kpi-Reporting-App/templates/directives/statusChange.html
+++ b/Kpi-Reporting-App/templates/directives/statusChange.html
@@ -5,7 +5,7 @@
 <div ng-if="!data.statusChanges[testCase.testCaseId] && testCase.isFinal != 1">
     <span class="text-left">{{testCase.statusName}}</span>
     <button class="text-right options"
-            ng-if="testCase.canEdit == 1"
+            ng-if="testCase.canEdit == 1 && data.unallocated <= 0"
             ng-click="prepareStatuses(testCase.testCaseId, testCase.statusId)">&#9776;</button>
 </div>
 
@@ -14,8 +14,7 @@
             ng-options="status.name for status in data.statuses track by status.id"
             ng-model="data.statusChanges[testCase.testCaseId]"></select>
     <div>
-        <button class="text-right no-symbol" ng-click="data.statusChanges[testCase.testCaseId] = false">
-            &#x2718;</button>
+        <button class="text-right no-symbol" ng-click="data.statusChanges[testCase.testCaseId] = false">&#x2718;</button>
         <button class="text-right yes-symbol" ng-click="changeTestCaseStatus(testCase)">&#x2714;</button>
     </div>
 </div>
