--- a/Kpi-Reporting-App/templates/projectSetup.html
+++ b/Kpi-Reporting-App/templates/projectSetup.html
@@ -9,12 +9,16 @@
     <form name="usersForm">
         <div ng-repeat="user in setupData.allUsers">
             <label>
-                <input type="checkbox" name="user" ng-checked="setupData.activeUsers[user.id]" ng-click="onUserSelect(user)">
+                <input type="checkbox" name="user"
+                       ng-disabled="setupData.existingPlan"
+                       ng-checked="setupData.activeUsers[user.id]"
+                       ng-click="onUserSelect(user)">
                 <span>{{user.username}}</span>
             </label>
             <label ng-if="setupData.activeUsers[user.id]">
                 <span> - Index {{user.performanceIndex}} / Indicator (%) </span>
                 <input type="number" name="userLoad" min="0" max="100" required
+                       ng-disabled="setupData.existingPlan"
                        ng-model="setupData.activeUsers[user.id].loadIndicator"
                        ng-change="onUserTCPDChange(user.id, user.performanceIndex)">
                 <span>
@@ -23,69 +27,70 @@
                 </span>
             </label>
         </div>
+    </form>
 
+    <hr>
+
+    <div>
         <div>
-            <hr>
-            <div>
-                <p style="color:blue;">FYI</p>
-                <p>Project unallocated test cases count {{setupData.unAllocatedTestCasesCount}}</p>
-                <p>Project expired non-finalized test cases count {{setupData.expiredNonFinalTestCasesCount}}</p>
-                <p>Test case per day tollerance {{setupData.acceptableTCPDDelta}}</p>
-                <p>Duration tollerance {{setupData.acceptableSuggestedDurationDelta}} days</p>
-            </div>
-            <hr>
-            <div>
-                <p style="color:blue;">System calculated</p>
-                <p>Executions per day based on given capacity {{setupData.expectedTCPD}}</p>
-                <p>Suggested duration based on given capacity {{setupData.suggestedDuration}} days</p>
-            </div>
-            <hr>
-            <div>
-                <p style="color:blue;">User input</p>
-                <p>Resulted executions per day based on user input {{setupData.actualTCPD}}</p>
-                <label>
-                    <span>Project duration</span>
-                    <input type="number" ng-model="setupData.duration" step="0.1" min="1" required
-                           ng-change="onDurationChange()">
-                    <span>&nbsp;days</span>
-                </label>
-                <div>
-                    <span>Test case allocation algorithm</span>
-                    <label>
-                        <p><input type="radio" name="algorithm" value="1" ng-model="setupData.algorithm">&quot;Fill days first&quot;</p>
-                    </label>
-                    <label>
-                        <p><input type="radio" name="algorithm" value="2" ng-model="setupData.algorithm">&quot;Balanced&quot;</p>
-                    </label>
-                </div>
-            </div>
-            <hr>
+            <p style="color:blue;">FYI</p>
+            <p>Project unallocated test cases count {{setupData.unAllocatedTestCasesCount}}</p>
+            <p>Project expired non-finalized test cases count {{setupData.expiredNonFinalTestCasesCount}}</p>
+            <p>Test case per day tollerance {{setupData.acceptableTCPDDelta}}</p>
+            <p>Duration tollerance {{setupData.acceptableSuggestedDurationDelta}} days</p>
         </div>
+        <hr>
+        <div>
+            <p style="color:blue;">System calculated</p>
+            <p>Executions per day based on given capacity {{setupData.expectedTCPD}}</p>
+            <p>Suggested duration based on given capacity {{setupData.suggestedDuration}} days</p>
+        </div>
+    </div>
 
-        <div ng-if="usersForm.$valid && setupData.planRenew == 0 && !setupData.emptyUsersArray">
-            <button ng-click="saveSetup()">Save</button>
-            <span ng-if="setupData.existingPlan">
-                <span ng-if="setupData.planResetPrompt">
-                     <button ng-click="setupData.planResetPrompt = false" style="color:red;">NO</button>
-                     <button ng-click="resetSetup()" style="color:green;">YES</button>
-                </span>
-                <span ng-if="!setupData.planResetPrompt">
-                    <button ng-click="setupData.planResetPrompt = true" style="color:red;">Reset</button>
-                </span>
+    <hr>
+
+    <form name="durationForm">
+        <p style="color:blue;">User input</p>
+        <p>Resulted executions per day based on user input {{setupData.actualTCPD}}</p>
+        <label>
+            <span>Project duration</span>
+            <input type="number" ng-model="setupData.duration" step="0.1" min="1" required
+                   ng-disabled="setupData.existingPlan"
+                   ng-change="onDurationChange()">
+            <span>&nbsp;days</span>
+        </label>
+        <div>
+            <span>Test case allocation algorithm</span>
+            <label><input type="radio" name="algorithm" value="1"
+                          ng-disabled="setupData.existingPlan"
+                          ng-model="setupData.algorithm">&quot;Fill days first&quot;</label>
+            <label><input type="radio" name="algorithm" value="2"
+                          ng-disabled="setupData.existingPlan"
+                          ng-model="setupData.algorithm">&quot;Balanced&quot;</label>
+        </div>
+    </form>
+
+    <hr>
+
+    <form name="finalizeForm">
+        <div ng-if="!setupData.existingPlan">
+            <span ng-if="usersForm.$valid && !setupData.emptyUsersArray">
+                <button ng-click="saveSetup()">Confirm</button>
+            </span>
+            <span ng-if="!usersForm.$valid || setupData.emptyUsersArray">
+                <button disabled>Invalid data</button>
             </span>
         </div>
 
-        <div ng-if="usersForm.$valid && setupData.planRenew == 1 && !setupData.emptyUsersArray">
-            <label>
-                <span>Plan reset</span>
-                <input type="checkbox" ng-model="setupData.planResetAccept">
-            </label>
-            <button ng-click="saveSetup()" ng-if="setupData.planResetAccept">Save</button>
-        </div>
-
-        <div ng-if="!usersForm.$valid || setupData.emptyUsersArray">
-            <button disabled>Invalid data</button>
-        </div>
+        <span ng-if="setupData.existingPlan">
+            <span ng-if="!setupData.planResetPrompt">
+                <button ng-click="setupData.planResetPrompt = true" style="color:red;">Reset</button>
+            </span>
+            <span ng-if="setupData.planResetPrompt">
+                 <button ng-click="setupData.planResetPrompt = false" style="color:red;">NO</button>
+                 <button ng-click="resetSetup()" style="color:green;">YES</button>
+            </span>
+        </span>
     </form>
 </div>
 
